# kog

./: README.md  pyproject.toml
kog/: cli.py
kog/agent/: react_agent.py  tools.py
kog/core/: config.py  context.py  session.py
